[package]
name = "ip_exporter"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
get_if_addrs = "0.5.3"
lazy_static = "1.4.0"
prometheus = { version = "0.12.0", features = ["process"] }
tokio = { version = "1.9.0", features = ["full"] }
warp = "0.3.1"
